<resources>
    <string name="app_name">Si-Reko</string>
    <string name="title_home">Home</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="image_onboarding">Image OnBoarding</string>
    <string name="location_error">location error</string>
    <string name="activate_location">activate location</string>
    <string name="icon_map">Icon Map</string>
    <string name="turn_on_location_service">Enable high-precision Location Service.</string>
    <string name="custom_dialog_desc">Explore captivating tours within your vicinity and unveil the enchanting wonders surrounding you.</string>
    <string name="later">Later</string>
    <string name="enable_location">Enable Location</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus tincidunt lorem id enim placerat, at semper eros rhoncus. Proin a enim non augue venenatis egestas. Curabitur eu nibh ex. Donec a mi eu nisl lacinia convallis. Sed laoreet neque quis enim tincidunt, nec lacinia justo iaculis. Maecenas vehicula massa vitae elit suscipit, in interdum mi convallis. Sed ut varius elit. Nulla facilisi. Pellentesque pulvinar justo et posuere commodo. Sed laoreet mi enim, ut laoreet turpis lobortis ac. Nunc placerat dui vel facilisis consectetur. Morbi non dignissim purus, sed consequat enim. Vivamus tristique ex ligula, nec fringilla tortor varius eu. Quisque placerat nisi et erat aliquam malesuada.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="login_text">login</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_teks">daftar</string>
    <string name="logo_login">logo login</string>
    <string name="field_nama_kosong">"Field name can\'t be empty"</string>
    <string name="field_email_kosong">Field email can\'t be empty</string>
    <string name="field_password_kosong">Field password can\'t be empty</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="_daftar">\tDaftar</string>
    <string name="_masuk">\tMasuk</string>
    <string name="palembang_sumatera_selatan">Palembang, Sumatera Selatan</string>
    <string name="tempat_wisata_di_dekatmu">Tempat Wisata di Dekatmu!</string>
    <string name="view_all">View All</string>
    <string name="tempat_wisata_sesuai_dengan_anda">Tempat Wisata sesuai dengan Anda!</string>
    <string name="tap_to_rate_this_place">Tap to rate this place</string>
    <string name="lokasi_sekarang">Lokasi Sekarang</string>
    <string name="lokasi_tujuan">Lokasi Tujuan</string>
    <string name="bad">Bad</string>
    <string name="excellent">Excellent</string>
    <string name="submit">Submit</string>
    <string name="welcome_to_si_reko">Welcome to Si-Reko</string>
    <string name="lorem_2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the ,</string>
    <string name="register">Register</string>
    <string name="teks_2_third_screen">Rencanakan petualangan yang sesuai dengan minat dan preferensi Anda. Temukan destinasi yang menarik dan buat kenangan tak terlupakan!</string>
    <string name="teks1_third_screen">Rencanakan Petualangan Anda</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="beragam_pilihan_destinasi">Beragam Pilihan Destinasi</string>
    <string name="teks2_second">Lebih dari 100 tempat wisata di sekitar Anda. Selalu ada pilihan yang tepat untuk Anda</string>
    <string name="welcome_onbard">Welcome Onbard!</string>
    <string name="logout">Logout</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="teks1_login">Silahkan login untuk melanjutkan</string>
    <string name="temukan_tempat_wisata_terdekat">Temukan Tempat Wisata Terdekat!</string>
    <string name="wisata_menarik">Temukan tempat wisata menarik berdasarkan lokasi terdekat Anda</string>
    <string name="bookmark">Bookmark</string>
    <string name="tidak_ada_destinasi_yang_tersimpan">Tidak ada destinasi yang tersimpan</string>

</resources>